# logs2metrics

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.example.yaml  docker-compose.yml  drain3.ini  pyproject.toml
.github/workflows/: docker-publish.yml
charts/log-triage/: Chart.yaml  README.md  values-production.yaml.example  values.yaml
charts/log-triage/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
dashboard/: .env.local.example  README.md  package-lock.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/categorized/: page.tsx
dashboard/src/components/: CategorizeForm.tsx  Nav.tsx  SeverityBadge.tsx  TemplateCard.tsx
dashboard/src/lib/: api.ts
docker/: app.Dockerfile  entrypoint.sh
docker/fluentbit/: fluent-bit.conf  generate_logs.py
prometheus/: prometheus.yml
src/logtriage/: config.py  factory.py  logging_config.py  main.py  models.py
src/logtriage/adapters/: drain3_clusterer.py  object_store_azure.py  object_store_local.py  object_store_null.py  object_store_s3.py  prometheus_metrics_sink.py  sqlite_template_store.py
src/logtriage/api/: health.py  ingest.py  templates.py
src/logtriage/ports/: clusterer.py  metrics_sink.py  object_store.py  template_store.py
src/logtriage/worker/: archive_buffer.py  pipeline.py
tests/: fakes.py  test_api.py  test_change_type_handling.py  test_factory.py  test_metric_label_resolution.py  test_pipeline.py  test_sqlite_template_store.py
(+2 files in other folders)
