[project]
name = "logtriage"
version = "0.1.0"
description = "Self-hostable log triage service: Drain3 clustering, human categorization, Prometheus metrics, object-store archival."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "drain3>=0.9.11",
    "prometheus-client>=0.25.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "boto3>=1.35",
    "azure-storage-blob>=12.24",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logtriage"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
